--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button class="btn" onclick="validateTriangle()">Check Validity</button>
         <p id="result"></p>
     </div>
-    <p class="footer">Made by Granny🤍</p>
+    <p class="footer">Made by Samrat🤍</p>
     <script src="script.js"></script>
 </body>
 
